--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                             </div>
                         </div>
                         <div class="tool-card" data-aos="zoom-in" data-aos-delay="400">
-                            <img src="./assets/images/tools/Mendix.jpeg" alt="Mendix"/>
+                            <img src="./assets/images/tools/Mendix.png" alt="Mendix"/>
                             <div class="tool-info">
                                 <h3>Mendix</h3>
                                 <p>Low-code Dev</p>
