--- a/index.html
+++ b/index.html
@@ -371,6 +371,18 @@
                     </div>
                 </div>
 
+                
+                <div class="project-card" data-aos="fade-up" data-aos-delay="300">
+                    <img src="./assets/images/proyek/WarungQ.png" alt="WarungQ System Analysis" class="project-img"/>
+                    <div class="project-content">
+                        <h2>WarungQ System Analysis</h2>
+                        <p>Designed scalable architecture for WarungQ, a mobile F&B platform. Delivered end-to-end UML modeling (Use Case, Class, & Sequence Diagrams) and robust relational database designs.</p>
+                        <div class="project-btn">
+                            <a href="https://drive.google.com/file/d/1jIhP9B8RAF0HWss-NEj48J6qM4S9APMj/view?usp=sharing" target="_blank" class="btn-fill">View Diagrams</a>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="project-card" data-aos="fade-up" data-aos-delay="400">
                     <img src="./assets/images/proyek/ERD Supermarket.jpeg" alt="Retail Database" class="project-img"/>
                     <div class="project-content">
