--- a/index.html
+++ b/index.html
@@ -382,6 +382,17 @@
                     </div>
                 </div>
 
+                <div class="project-card" data-aos="fade-up" data-aos-delay="300">
+                    <img src="./assets/images/proyek/VeggieBox.png" alt="VeggieBox Mendix" class="project-img"/>
+                    <div class="project-content">
+                        <h2>VeggieBox E-Grocery Platform</h2>
+                        <p>Engineered a Mendix-based e-commerce platform with a 'Recipe-to-Cart' workflow. Integrated dietary personalization with real-time inventory management to optimize supply chain efficiency and user retention.</p>
+                        <div class="project-btn">
+                            <a href="https://docs.google.com/document/d/1XLkv_wxjndnAi1H4FNGuWVxvZAWXLsKk/edit?usp=sharing&ouid=113120039388948116857&rtpof=true&sd=true" target="_blank" class="btn-fill">View Details</a>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="project-card" data-aos="fade-up" data-aos-delay="400">
                     <img src="./assets/images/proyek/ERD Supermarket.jpeg" alt="Retail Database" class="project-img"/>
                     <div class="project-content">
